2009-05-05 v0.11 beta

A quick fix for markers as N++ masks them.
Try to do numerical comparison for sorting keys in Context and other windows.

2008-11-16 v0.10 beta

Changed to UNICODE.
Handling for multiple concurent debug sessions.
More socket error handling.


2008-07-30 v0.9 beta

New configuration, local setup bypasses all mapping.
Experimental breakpoint tracking.
Added GetLongPathName, so that internal paths are aligned with notepad's paths.
Added unescape routine for dbgp files (eval).
Updated breakpoint edit form for better alignment with xdebug.
Remove all breakpoints.
Added copy to clipboard from context and inspect tree forms.
Fixed a bug (or some change in NPP) with opening files (green arrow not shown).
A readme section on testing.

2008-04-20 v0.8 beta

Added listen port config directive. No dialog interface for it, just edit config file.
CTRL+Click on margin to add breakpoint.
Notepad++ will now remember last position of the debug window.
Fixed a problem with newer XDebug when stepping out of the script.
Made variable trees (context, watch...) sortable.
Also when a variable inside an array changes, the red change indicator is propagated back to the top.
Added a stop button. Aborts script.
Watch child now present at startup.

2008-02-16 v0.7 beta fix

Fixed a bug in configuration dialog.

2008-02-08 v0.7 beta

Added config option to not break at first line of code.
A few code cleanups.
Fixed a bug in the watch child.
Unreleased windows path mapping problem.

2007-11-25 v0.6 beta

Added new config options.
Confiuration changes take effect right away.
NPPM_SHUTDOWN.
New breakpoint icons.

2007-10-12 v0.5 alpha fix

Added WM_CLOSE processing that should fix the hanging after exit problem. (Waiting for NPP approval).

2007-10-06 v0.5 alpha

About form displays current version and build.
Breakpoints display icons.
One config variable was miss-named.
Added menu items for all child windows.
Experimental eval on mouse dwell.